two layer training and testing code working well

--- a/src/python/scratch_two_layer.ipynb
+++ b/src/python/scratch_two_layer.ipynb
@@ -16,8 +16,8 @@
     "    * $X^{T}$ is used for input into nueral network model\n",
     "\n",
     " ## Basic NN Structure ##\n",
-    "input layer: 784 nodes \n",
-    "hidden layer: 10 nodes \n",
+    "input layer: 784 nodes  \n",
+    "hidden layer: 10 nodes  \n",
     "output layer: 10 nodes for 10 classes or digits \n",
     "\n",
     "## Forward Propagation ##\n",
@@ -37,7 +37,7 @@
     "* $A^{[1]} = g(Z^{[1]}) = \\text{ReLu}(Z^{[1]})$ (Activated: ReLU transformation of linear transformation)\n",
     "\n",
     "The output layer works similarly to the hidden layer but with an output specific activation function. \\\n",
-    "The hidden layer is linearally transformed and this time we use a softmax as an activation function to convert our transformed values into probabilities. \n",
+    "The hidden layer is linearally transformed and this time we use a softmax as an activation function to convert our transformed values into probabilities.   \n",
     "The softmax essentially calculates the contribution of each not to the total output vector.\n",
     "\n",
     "$\\text{softmax}(x) = \\dfrac{e^{x_{i}}}{\\sum_{i=1}^{k} e^{x_{i}}}$\n",
@@ -93,19 +93,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#### ACTIVATION FUNCTIONS ####\n",
+    "import sys\n",
+    "import os\n",
+    "import struct\n",
+    "import numpy as np\n",
+    "import pandas as pd \n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "### ACTIVATION FUNCTIONS ####\n",
     "def ReLU(vec: np.array):\n",
-    "    return np.maximum(0, vec)\n",
+    "    return np.maximum(vec, 0)\n",
     "\n",
     "def deriv_ReLU(vec: np.array):\n",
     "    return vec > 0\n",
     "\n",
     "def softmax(vec: np.array):\n",
-    "    return np.exp(vec) / np.sum(np.exp(vec))\n",
+    "    exp = np.exp(vec - np.max(vec))\n",
+    "    probs = exp / exp.sum(axis = 0)\n",
+    "    return probs\n",
     "\n",
     "#### LOSS FUNCTIONS ####\n",
     "\n",
@@ -139,21 +148,22 @@
     "        self.node_count = node_count\n",
     "        self.activation_func = activation_func\n",
     "        # random init of weights and biases\n",
-    "        self.weights = np.random.rand(node_count, input_size)\n",
-    "        self.biases = np.random.rand(node_count, 1)\n",
+    "        self.weights = np.random.rand(node_count, input_size) - 0.5\n",
+    "        self.biases = np.random.rand(node_count, 1) - 0.5\n",
     "    \n",
     "    def transform(self, input_dat: np.array):\n",
     "\n",
     "        lin_transform = self.weights.dot(input_dat) + self.biases\n",
     "        self.unactivated_node_values = lin_transform\n",
-    "        self.node_values = self.acivation_func(lin_transform) \n",
+    "        node_values = self.activation_func(lin_transform) \n",
+    "        self.node_values = node_values\n",
     "\n",
-    "        return self.node_values\n",
+    "        return node_values\n",
     "\n",
     "    def update_weights_n_biases(self, weight_error, bias_error, learning_rate):\n",
     "\n",
-    "        self.weights = self.weights - learning_rate * weight_error\n",
-    "        self.biases = self.biases - learning_rate * biase_error\n",
+    "        self.weights -= learning_rate * weight_error\n",
+    "        self.biases -= learning_rate * bias_error.reshape(10, 1)\n",
     "\n",
     "\n",
     "class TwoLayerNN(object):\n",
@@ -170,32 +180,39 @@
     "            learning_rate: float,\n",
     "        ):\n",
     "\n",
-    "        self.train_dat = train_dat\n",
+    "        self.train_dat = train_dat / 255\n",
     "        self.train_labels = train_labels\n",
     "        self.one_hot_train_labels = one_hot(train_labels)\n",
-    "        self.test_dat = test_dat\n",
+    "        self.test_dat = test_dat / 255\n",
     "        self.test_labels = test_labels\n",
+    "        self.one_hot_test_labels = one_hot(test_labels)\n",
     "        self.learning_rate = learning_rate\n",
-    "        self.hidden_layer = Layer(\"hidden\", hidden_nodes, train_dat.shape[0], activation_func = ReLU)\n",
+    "        self.hidden_layer = Layer(\"hidden\", train_dat.shape[0], hidden_nodes, activation_func = ReLU)\n",
     "        self.output_layer = Layer(\"out\", output_nodes, hidden_nodes, activation_func = softmax)\n",
     "\n",
-    "    def forward_prop(self):\n",
+    "    def forward_prop(self, dataset = \"train\"):\n",
     "\n",
-    "        hidden_transformed = self.hidden_layer.transfrom(self.train_dat)\n",
+    "        if dataset == \"train\":\n",
+    "            data = self.train_dat\n",
+    "        elif dataset == \"test\":\n",
+    "            data = self.test_dat\n",
+    "\n",
+    "        hidden_transformed = self.hidden_layer.transform(data)\n",
     "        out = self.output_layer.transform(hidden_transformed)\n",
-    "        self.out = out\n",
     "\n",
-    "    def backward_prop(self):\n",
+    "        return out\n",
+    "\n",
+    "    def backward_prop(self, out):\n",
     "\n",
     "        m = self.train_dat.shape[1]\n",
     "        # prediction error\n",
-    "        dZ_o = self.out - self.one_hot_train_labels\n",
+    "        dZ_o = out - self.one_hot_train_labels\n",
     "        dw_o = (1 / m) * dZ_o.dot(self.hidden_layer.node_values.T) \n",
-    "        db_o =  np.sum(dZ_o, 2) / m\n",
+    "        db_o =  (1 / m) * np.sum(dZ_o, 1)\n",
     "        # hidden layer error\n",
     "        dZ_h =  self.output_layer.weights.T.dot(dZ_o) * deriv_ReLU(self.hidden_layer.unactivated_node_values)\n",
-    "        dw_h = (1 / m) * dZ_h.dot(self.train.T)\n",
-    "        db_h =  np.sum(dZ_h) / m\n",
+    "        dw_h = (1 / m) * dZ_h.dot(self.train_dat.T)\n",
+    "        db_h =  (1 / m) * np.sum(dZ_h, 1)\n",
     "        # update weights and biases from error components\n",
     "        self.hidden_layer.update_weights_n_biases(dw_h, db_h, self.learning_rate)\n",
     "        self.output_layer.update_weights_n_biases(dw_o, db_o, self.learning_rate)\n",
@@ -203,22 +220,33 @@
     "    def gradient_descent(self, iterations):\n",
     "\n",
     "        for i in range(iterations):\n",
-    "            pred = self.forward_prop()\n",
-    "            self.backward_prop()"
+    "            pred = self.forward_prop(dataset = \"train\")\n",
+    "            self.backward_prop(pred)\n",
+    "            if i % 100 == 0:\n",
+    "                dig_pred = get_predictions(pred)\n",
+    "                acc = get_accuracy(dig_pred, self.train_labels)\n",
+    "                print(f\"iter: {i} accuracy = {acc}\")\n",
+    "    \n",
+    "    def test_accuracy(self):\n",
+    "\n",
+    "        pred = self.forward_prop(dataset = \"test\")\n",
+    "        dig_pred = get_predictions(pred)\n",
+    "        acc = get_accuracy(dig_pred, self.test_labels)\n",
+    "        print(f\"Testing accuracy = {acc}\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Loading the Data and Training the Neural Network ###\n",
-    "In the code below I'm loading in the data and formatting to instantiate my nueral network. \n",
-    "Then I train the network and evaluate it's accuracy"
+    "### Loading the Data Visualizing an Image\n",
+    "In the code below I'm loading in the data and formatting to instantiate my nueral network. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -231,10 +259,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x16e701350>"
+       "<matplotlib.image.AxesImage at 0x12191cc50>"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -250,16 +278,7 @@
     }
    ],
    "source": [
-    "import sys\n",
-    "import os\n",
-    "import struct\n",
-    "import numpy as np\n",
-    "import pandas as pd \n",
-    "from matplotlib import pyplot as plt\n",
-    "\n",
     "datpath = \"../../data/mnist\"\n",
-    "image_size = 28\n",
-    "num_images = 10\n",
     "\n",
     "def read_mnist(im_path, label_path):\n",
     "\n",
@@ -296,21 +315,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training the Neural Network\n",
+    "Below I train the two layer nueral network with a learning rate of 0.1 and 1001 training iterations.  \n",
+    "The model ends up with training accuracy of 87.6% and testing accuracy of 87.8%. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(784, 60000)\n"
+      "iter: 0 accuracy = 0.0953\n",
+      "iter: 100 accuracy = 0.5847666666666667\n",
+      "iter: 200 accuracy = 0.73765\n",
+      "iter: 300 accuracy = 0.7932666666666667\n",
+      "iter: 400 accuracy = 0.8213166666666667\n",
+      "iter: 500 accuracy = 0.8384833333333334\n",
+      "iter: 600 accuracy = 0.8504833333333334\n",
+      "iter: 700 accuracy = 0.8593\n",
+      "iter: 800 accuracy = 0.8657833333333333\n",
+      "iter: 900 accuracy = 0.8717833333333334\n",
+      "iter: 1000 accuracy = 0.8762666666666666\n",
+      "Testing accuracy = 0.8788\n"
      ]
     }
    ],
    "source": [
     "# init NN object\n",
-    "nn = TwoLayerNN(train_dat.T, train_labels, test_dat.T, test_labels, hidden_nodes = 10, output_nodes = 10, learning_rate = 0.1)"
+    "nn = TwoLayerNN(train_dat.T, train_labels, test_dat.T, test_labels, hidden_nodes = 10, output_nodes = 10, learning_rate = 0.10)\n",
+    "nn.gradient_descent(iterations = 1001)\n",
+    "nn.test_accuracy()"
    ]
   }
  ],
