added flow chart of forward prop

--- a/src/python/scratch_two_layer.ipynb
+++ b/src/python/scratch_two_layer.ipynb
@@ -21,7 +21,10 @@
     "output layer: 10 nodes for 10 classes or digits \n",
     "\n",
     "## Forward Propagation ##\n",
-    "Forward propagation is the process of transforming our input data into our output data.\n",
+    "Forward propagation is the process of transforming our input data into our output data.   \n",
+    "Forward propagation is imaged below. This a transformation process of an input matrix going through a two layer neural network is shown below.  \n",
+    "\n",
+    "![Forward_propagation](../../data/imgs/2layer_forward_prop.png)\n",
     "\n",
     "The input layer is simply a matrix of our raw training data.  \n",
     "Input Layer Definition:\n",
@@ -352,6 +355,15 @@
     "nn = TwoLayerNN(train_dat.T, train_labels, test_dat.T, test_labels, hidden_nodes = 10, output_nodes = 10, learning_rate = 0.10)\n",
     "nn.gradient_descent(iterations = 1001)\n",
     "nn.test_accuracy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hyperparameter Optimization\n",
+    "Below I will attempt to optimize the two layer neural network.   \n",
+    "I will do this by applying search methods to the learning rate hyper parameter and the number of nodes used in the hidden layer."
    ]
   }
  ],
