fixing error in flowchart

--- a/src/python/scratch_two_layer.ipynb
+++ b/src/python/scratch_two_layer.ipynb
@@ -22,9 +22,9 @@
     "\n",
     "## Forward Propagation ##\n",
     "Forward propagation is the process of transforming our input data into our output data.   \n",
-    "Forward propagation is imaged below. This a transformation process of an input matrix going through a two layer neural network is shown below.  \n",
+    "Forward propagation for our two layer neural network is imaged below.  \n",
     "\n",
-    "![Forward_propagation](../../data/imgs/2layer_forward_prop.png)\n",
+    "![Forward Propagation](../../data/imgs/2layer_forward_prop.svg)\n",
     "\n",
     "The input layer is simply a matrix of our raw training data.  \n",
     "Input Layer Definition:\n",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -262,10 +262,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x12191cc50>"
+       "<matplotlib.image.AxesImage at 0x15365f0d0>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -328,32 +328,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "iter: 0 accuracy = 0.0953\n",
-      "iter: 100 accuracy = 0.5847666666666667\n",
-      "iter: 200 accuracy = 0.73765\n",
-      "iter: 300 accuracy = 0.7932666666666667\n",
-      "iter: 400 accuracy = 0.8213166666666667\n",
-      "iter: 500 accuracy = 0.8384833333333334\n",
-      "iter: 600 accuracy = 0.8504833333333334\n",
-      "iter: 700 accuracy = 0.8593\n",
-      "iter: 800 accuracy = 0.8657833333333333\n",
-      "iter: 900 accuracy = 0.8717833333333334\n",
-      "iter: 1000 accuracy = 0.8762666666666666\n",
-      "Testing accuracy = 0.8788\n"
+      "(10, 784) x (784, 60000) + (10, 1) = (10, 60000)\n",
+      "(10, 10) x (10, 60000) + (10, 1) = (10, 60000)\n",
+      "iter: 0 accuracy = 0.1535\n",
+      "(10, 784) x (784, 10000) + (10, 1) = (10, 10000)\n",
+      "(10, 10) x (10, 10000) + (10, 1) = (10, 10000)\n",
+      "Testing accuracy = 0.1465\n"
      ]
     }
    ],
    "source": [
     "# init NN object\n",
     "nn = TwoLayerNN(train_dat.T, train_labels, test_dat.T, test_labels, hidden_nodes = 10, output_nodes = 10, learning_rate = 0.10)\n",
-    "nn.gradient_descent(iterations = 1001)\n",
+    "nn.gradient_descent(iterations = 1)\n",
     "nn.test_accuracy()"
    ]
   },
