add back prop flow chart

--- a/src/python/scratch_two_layer.ipynb
+++ b/src/python/scratch_two_layer.ipynb
@@ -17,8 +17,15 @@
     "\n",
     " ## Basic NN Structure ##\n",
     "input layer: 784 nodes  \n",
-    "hidden layer: 10 nodes  \n",
-    "output layer: 10 nodes for 10 classes or digits \n",
+    "* 28 by 28 images flattened into a vector  \n",
+    "\n",
+    "hidden layer: h nodes (h in image below) \n",
+    "* This parameter should be optimized based on performace. \n",
+    "\n",
+    "output layer: 10 nodes (o in images below)\n",
+    "* 10 classes or digits, so 10 nodes \n",
+    "\n",
+    "Note: In images below true matrix size is not shown. Dimensions are noted by variables next to each axis.\n",
     "\n",
     "## Forward Propagation ##\n",
     "Forward propagation is the process of transforming our input data into our output data.   \n",
@@ -51,6 +58,9 @@
     "## Back Propagation ##\n",
     "Back Propagation is the process we use to learn the weights and biases in the forward propagation process.  \n",
     "It works by finding the error in the weights, biases, and predictions working backward from the output layer. \n",
+    "This process for our two layer neural network is imaged below.  \n",
+    "\n",
+    "![Back Propagation](../../data/imgs/2layer_back_prop.svg)\n",
     "\n",
     "First step is to find the error of the output layer by subtracting the classes from our output layer matrix.  \n",
     "Y is the digit pictured in each image in the training set. Y is a one-hot encoded 10 by m matrix. \n",
@@ -64,7 +74,7 @@
     "\n",
     "Repeat this process to find error of weights and biases in the first layer. Must undo activation function. \n",
     "$g`$ is the derivative of the activation function\n",
-    "* $dZ^{[1]} = w^{[2]T} dZ^{[2]} \\cdot g`(Z^{[1]})$ (error of unactivated layer 2 nodes)\n",
+    "* $dZ^{[1]} = w^{[2]T} dZ^{[2]} \\cdot g`(Z^{[1]})$ (error of Hidden Layer transformation)\n",
     "* $dw^{[1]} = \\frac{1}{m} dZ^{[1]} X^T$ (contribution of weights to layer 2 error)\n",
     "* $db^{[1]} = \\frac{1}{m} \\sum dZ^{[1]}$ (contribution of biases to layer 2 error)\n",
     "\n",
@@ -96,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,10 +235,10 @@
     "        for i in range(iterations):\n",
     "            pred = self.forward_prop(dataset = \"train\")\n",
     "            self.backward_prop(pred)\n",
-    "            if i % 100 == 0:\n",
+    "            if (i + 1) % 100 == 0:\n",
     "                dig_pred = get_predictions(pred)\n",
     "                acc = get_accuracy(dig_pred, self.train_labels)\n",
-    "                print(f\"iter: {i} accuracy = {acc}\")\n",
+    "                print(f\"iter: {i+1} accuracy = {acc}\")\n",
     "    \n",
     "    def test_accuracy(self):\n",
     "\n",
@@ -249,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -262,10 +272,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x15365f0d0>"
+       "<matplotlib.image.AxesImage at 0x1590bf210>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -322,32 +332,37 @@
    "metadata": {},
    "source": [
     "### Training the Neural Network\n",
-    "Below I train the two layer nueral network with a learning rate of 0.1 and 1001 training iterations.  \n",
-    "The model ends up with training accuracy of 87.6% and testing accuracy of 87.8%. "
+    "Below I train the two layer neural network with a 1 hidden layer with 10 nodes, a learning rate of 0.1 and 1000 training iterations.  \n",
+    "This initial model ends up with testing and training accuracy around mid 80%."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(10, 784) x (784, 60000) + (10, 1) = (10, 60000)\n",
-      "(10, 10) x (10, 60000) + (10, 1) = (10, 60000)\n",
-      "iter: 0 accuracy = 0.1535\n",
-      "(10, 784) x (784, 10000) + (10, 1) = (10, 10000)\n",
-      "(10, 10) x (10, 10000) + (10, 1) = (10, 10000)\n",
-      "Testing accuracy = 0.1465\n"
+      "iter: 100 accuracy = 0.5579166666666666\n",
+      "iter: 200 accuracy = 0.6876\n",
+      "iter: 300 accuracy = 0.74285\n",
+      "iter: 400 accuracy = 0.7777\n",
+      "iter: 500 accuracy = 0.8039166666666666\n",
+      "iter: 600 accuracy = 0.8230666666666666\n",
+      "iter: 700 accuracy = 0.8373333333333334\n",
+      "iter: 800 accuracy = 0.8479\n",
+      "iter: 900 accuracy = 0.8557833333333333\n",
+      "iter: 1000 accuracy = 0.8629833333333333\n",
+      "Testing accuracy = 0.8638\n"
      ]
     }
    ],
    "source": [
     "# init NN object\n",
     "nn = TwoLayerNN(train_dat.T, train_labels, test_dat.T, test_labels, hidden_nodes = 10, output_nodes = 10, learning_rate = 0.10)\n",
-    "nn.gradient_descent(iterations = 1)\n",
+    "nn.gradient_descent(iterations = 1000)\n",
     "nn.test_accuracy()"
    ]
   },
