--- a/src/python/scratch_two_layer.ipynb
+++ b/src/python/scratch_two_layer.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Digit Classifier Using MNIST #\n",
+    "# Two Layer NN Digit Classifier Using MNIST #\n",
     "\n",
     "MNIST is a dataset of low res images of hand written digits.\n",
     "In this notebook I will explore the math and implement from scratch in python different nueral network structures and compare their performance.\n",
@@ -31,7 +31,7 @@
     "Forward propagation is the process of transforming our input data into our output data.   \n",
     "Forward propagation for our two layer neural network is imaged below.  \n",
     "\n",
-    "![Forward Propagation](../../data/imgs/2layer_forward_prop.svg)\n",
+    "![forward_prop](../../data/imgs/2layer_forward_prop.svg)\n",
     "\n",
     "The input layer is simply a matrix of our raw training data.  \n",
     "Input Layer Definition:\n",
@@ -60,7 +60,7 @@
     "It works by finding the error in the weights, biases, and predictions working backward from the output layer. \n",
     "This process for our two layer neural network is imaged below.  \n",
     "\n",
-    "![Back Propagation](../../data/imgs/2layer_back_prop.svg)\n",
+    "![back_prop](../../data/imgs/2layer_back_prop.svg)\n",
     "\n",
     "First step is to find the error of the output layer by subtracting the classes from our output layer matrix.  \n",
     "Y is the digit pictured in each image in the training set. Y is a one-hot encoded 10 by m matrix. \n",
@@ -101,12 +101,12 @@
    "source": [
     "### Neural Network Code ###\n",
     "Below I've programmed some functions and classes to make a two layer neural network from scratch. \\\n",
-    "I've chosen to make general classes for a layer and a Two Layer nn so I can easily change the size of the layers and other parameters for optimization. \\\n"
+    "I've chosen to make general classes for a layer and a Two Layer nn so I can easily change the size of the layers and other parameters for optimization.  \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,6 +154,7 @@
     "\n",
     "class Layer(object):\n",
     "\n",
+    "\n",
     "    def __init__(self, layer_id, input_size, node_count, activation_func):\n",
     "\n",
     "        # Layer metadata\n",
@@ -176,7 +177,7 @@
     "    def update_weights_n_biases(self, weight_error, bias_error, learning_rate):\n",
     "\n",
     "        self.weights -= learning_rate * weight_error\n",
-    "        self.biases -= learning_rate * bias_error.reshape(10, 1)\n",
+    "        self.biases -= learning_rate * bias_error.reshape(self.node_count, 1)\n",
     "\n",
     "\n",
     "class TwoLayerNN(object):\n",
@@ -193,15 +194,15 @@
     "            learning_rate: float,\n",
     "        ):\n",
     "\n",
-    "        self.train_dat = train_dat / 255\n",
+    "        self.train_dat = train_dat / 255 # divide to make values between 0 and 1\n",
     "        self.train_labels = train_labels\n",
     "        self.one_hot_train_labels = one_hot(train_labels)\n",
-    "        self.test_dat = test_dat / 255\n",
+    "        self.test_dat = test_dat / 255 # divide to make values between 0 and 1\n",
     "        self.test_labels = test_labels\n",
     "        self.one_hot_test_labels = one_hot(test_labels)\n",
     "        self.learning_rate = learning_rate\n",
     "        self.hidden_layer = Layer(\"hidden\", train_dat.shape[0], hidden_nodes, activation_func = ReLU)\n",
-    "        self.output_layer = Layer(\"out\", output_nodes, hidden_nodes, activation_func = softmax)\n",
+    "        self.output_layer = Layer(\"out\", hidden_nodes, output_nodes, activation_func = softmax)\n",
     "\n",
     "    def forward_prop(self, dataset = \"train\"):\n",
     "\n",
@@ -232,13 +233,15 @@
     "\n",
     "    def gradient_descent(self, iterations):\n",
     "\n",
+    "        print(f\"Running model with {self.hidden_layer.node_count} hidden layer nodes\")\n",
+    "\n",
     "        for i in range(iterations):\n",
     "            pred = self.forward_prop(dataset = \"train\")\n",
     "            self.backward_prop(pred)\n",
-    "            if (i + 1) % 100 == 0:\n",
+    "            if (i + 1) % 1000 == 0:\n",
     "                dig_pred = get_predictions(pred)\n",
     "                acc = get_accuracy(dig_pred, self.train_labels)\n",
-    "                print(f\"iter: {i+1} accuracy = {acc}\")\n",
+    "                print(f\"training accuracy @ iter {i+1} = {acc}\")\n",
     "    \n",
     "    def test_accuracy(self):\n",
     "\n",
@@ -246,6 +249,8 @@
     "        dig_pred = get_predictions(pred)\n",
     "        acc = get_accuracy(dig_pred, self.test_labels)\n",
     "        print(f\"Testing accuracy = {acc}\")\n",
+    "\n",
+    "        return acc\n",
     "\n"
    ]
   },
@@ -259,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -272,10 +277,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1590bf210>"
+       "<matplotlib.image.AxesImage at 0x126d0e4d0>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -370,9 +375,135 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Hyperparameter Optimization\n",
-    "Below I will attempt to optimize the two layer neural network.   \n",
-    "I will do this by applying search methods to the learning rate hyper parameter and the number of nodes used in the hidden layer."
+    "### Hidden Layer Node Count Optimization\n",
+    "Below I will attempt to optimize the two layer neural network with the following constraints.\n",
+    "* learning rate = 0.1\n",
+    "* only optimizing the number of nodes in the hidden layer \n",
+    "* only using 100 nodes maximun to save training time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running model with 10 hidden layer nodes\n",
+      "training accuracy @ iter 1000 = 0.8781166666666667\n",
+      "Testing accuracy = 0.8782\n",
+      "Running model with 100 hidden layer nodes\n",
+      "training accuracy @ iter 1000 = 0.9237166666666666\n",
+      "Testing accuracy = 0.9246\n",
+      "Running model with 55 hidden layer nodes\n",
+      "training accuracy @ iter 1000 = 0.9150166666666667\n",
+      "Testing accuracy = 0.9148\n",
+      "best model: 100 nodes \n",
+      "Testing accuracy = 0.9246\n",
+      "Running model with 77 hidden layer nodes\n",
+      "training accuracy @ iter 1000 = 0.9188\n",
+      "Testing accuracy = 0.9206\n",
+      "best model: 100 nodes \n",
+      "Testing accuracy = 0.9246\n",
+      "Running model with 88 hidden layer nodes\n",
+      "training accuracy @ iter 1000 = 0.9217\n",
+      "Testing accuracy = 0.919\n",
+      "best model: 100 nodes \n",
+      "Testing accuracy = 0.9246\n",
+      "Running model with 88 hidden layer nodes\n",
+      "training accuracy @ iter 1000 = 0.9206833333333333\n",
+      "Testing accuracy = 0.919\n",
+      "best model: 100 nodes \n",
+      "Testing accuracy = 0.9246\n",
+      "Running model with 88 hidden layer nodes\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[37], line 27\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m dif \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m5\u001b[39m:\n\u001b[1;32m     26\u001b[0m     nodes \u001b[38;5;241m=\u001b[39m split(min_nodes, max_nodes)\n\u001b[0;32m---> 27\u001b[0m     acc, mod \u001b[38;5;241m=\u001b[39m run_model(nodes)\n\u001b[1;32m     29\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m min_acc \u001b[38;5;241m>\u001b[39m acc \u001b[38;5;129;01mand\u001b[39;00m acc \u001b[38;5;241m>\u001b[39m max_acc:\n\u001b[1;32m     30\u001b[0m         max_nodes \u001b[38;5;241m=\u001b[39m nodes\n",
+      "Cell \u001b[0;32mIn[37], line 14\u001b[0m, in \u001b[0;36mrun_model\u001b[0;34m(node_count)\u001b[0m\n\u001b[1;32m     12\u001b[0m nodes \u001b[38;5;241m=\u001b[39m split(min_nodes, max_nodes)\n\u001b[1;32m     13\u001b[0m nn \u001b[38;5;241m=\u001b[39m TwoLayerNN(train_dat\u001b[38;5;241m.\u001b[39mT, train_labels, test_dat\u001b[38;5;241m.\u001b[39mT, test_labels, hidden_nodes \u001b[38;5;241m=\u001b[39m node_count, output_nodes \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m, learning_rate \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.10\u001b[39m)\n\u001b[0;32m---> 14\u001b[0m nn\u001b[38;5;241m.\u001b[39mgradient_descent(iterations \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1000\u001b[39m)\n\u001b[1;32m     15\u001b[0m acc \u001b[38;5;241m=\u001b[39m nn\u001b[38;5;241m.\u001b[39mtest_accuracy()\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m acc, nn\n",
+      "Cell \u001b[0;32mIn[35], line 127\u001b[0m, in \u001b[0;36mTwoLayerNN.gradient_descent\u001b[0;34m(self, iterations)\u001b[0m\n\u001b[1;32m    124\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRunning model with \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhidden_layer\u001b[38;5;241m.\u001b[39mnode_count\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m hidden layer nodes\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    126\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(iterations):\n\u001b[0;32m--> 127\u001b[0m     pred \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mforward_prop(dataset \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtrain\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    128\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbackward_prop(pred)\n\u001b[1;32m    129\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m (i \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m) \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m1000\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
+      "Cell \u001b[0;32mIn[35], line 102\u001b[0m, in \u001b[0;36mTwoLayerNN.forward_prop\u001b[0;34m(self, dataset)\u001b[0m\n\u001b[1;32m     99\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m dataset \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtest\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m    100\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtest_dat\n\u001b[0;32m--> 102\u001b[0m hidden_transformed \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhidden_layer\u001b[38;5;241m.\u001b[39mtransform(data)\n\u001b[1;32m    103\u001b[0m out \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moutput_layer\u001b[38;5;241m.\u001b[39mtransform(hidden_transformed)\n\u001b[1;32m    105\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m out\n",
+      "Cell \u001b[0;32mIn[35], line 58\u001b[0m, in \u001b[0;36mLayer.transform\u001b[0;34m(self, input_dat)\u001b[0m\n\u001b[1;32m     56\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mtransform\u001b[39m(\u001b[38;5;28mself\u001b[39m, input_dat: np\u001b[38;5;241m.\u001b[39marray):\n\u001b[0;32m---> 58\u001b[0m     lin_transform \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mweights\u001b[38;5;241m.\u001b[39mdot(input_dat) \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbiases\n\u001b[1;32m     59\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39munactivated_node_values \u001b[38;5;241m=\u001b[39m lin_transform\n\u001b[1;32m     60\u001b[0m     node_values \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mactivation_func(lin_transform) \n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "#set random state for cross model comparisson\n",
+    "np.random.RandomState(seed = 7734)\n",
+    "\n",
+    "min_nodes = 10\n",
+    "max_nodes = 100\n",
+    "\n",
+    "def split(min_n, max_n):\n",
+    "    return int((min_n + max_n) / 2)\n",
+    "\n",
+    "def run_model(node_count):\n",
+    "\n",
+    "    nodes = split(min_nodes, max_nodes)\n",
+    "    nn = TwoLayerNN(train_dat.T, train_labels, test_dat.T, test_labels, hidden_nodes = node_count, output_nodes = 10, learning_rate = 0.10)\n",
+    "    nn.gradient_descent(iterations = 1000)\n",
+    "    acc = nn.test_accuracy()\n",
+    "\n",
+    "    return acc, nn\n",
+    "\n",
+    "min_acc, min_mod = run_model(min_nodes)\n",
+    "max_acc, max_mod = run_model(max_nodes)\n",
+    "\n",
+    "dif = max_nodes - min_nodes\n",
+    "\n",
+    "while dif > 5:\n",
+    "\n",
+    "    nodes = split(min_nodes, max_nodes)\n",
+    "    dif = max_nodes - min_nodes\n",
+    "    acc, mod = run_model(nodes)\n",
+    "\n",
+    "    if min_acc > acc and acc > max_acc:\n",
+    "        max_nodes = nodes\n",
+    "        max_acc = acc\n",
+    "        max_mod = mod\n",
+    "        best = min_mod\n",
+    "\n",
+    "    elif max_acc > acc and acc > min_acc:\n",
+    "\n",
+    "        min_nodes = nodes\n",
+    "        min_acc = acc\n",
+    "        min_mod = mod\n",
+    "        best = max_mod\n",
+    "    \n",
+    "    elif acc > max_acc and acc > min_acc:\n",
+    "\n",
+    "        if max_acc > min_acc:\n",
+    "            min_nodes = nodes\n",
+    "            min_acc = acc\n",
+    "            min_mod = mod\n",
+    "            best = mod\n",
+    "\n",
+    "        elif min_acc > max_acc:\n",
+    "            max_nodes = nodes\n",
+    "            max_acc = acc\n",
+    "            max_mod = mod\n",
+    "            best = mod\n",
+    "    print(f\"best model: {best.hidden_layer.node_count} nodes \")\n",
+    "    best_acc = best.test_accuracy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hidden Layer Optimization Results\n",
+    "\n",
+    "I applied a binary search method to find the best number of nodes between 10 and 100 nodes.   \n",
+    "The best model had 100 nodes in the hidden layer. The trend in the data above suggests that more nodes in the hidden layer leads to better predictons. This makes sense as more nodes means more parameters learned within the model allowing for more flexibility. It is very likely a model with more layers and nodes would result in better performance. However further optimization of the hidden layer in this model is out of scope"
    ]
   }
  ],
