--- a/src/python/scratch_two_layer.ipynb
+++ b/src/python/scratch_two_layer.ipynb
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -392,47 +392,51 @@
      "output_type": "stream",
      "text": [
       "Running model with 10 hidden layer nodes\n",
-      "training accuracy @ iter 1000 = 0.8781166666666667\n",
-      "Testing accuracy = 0.8782\n",
+      "training accuracy @ iter 1000 = 0.8772333333333333\n",
+      "Testing accuracy = 0.8813\n",
       "Running model with 100 hidden layer nodes\n",
-      "training accuracy @ iter 1000 = 0.9237166666666666\n",
-      "Testing accuracy = 0.9246\n",
+      "training accuracy @ iter 1000 = 0.9278\n",
+      "Testing accuracy = 0.9267\n",
       "Running model with 55 hidden layer nodes\n",
-      "training accuracy @ iter 1000 = 0.9150166666666667\n",
-      "Testing accuracy = 0.9148\n",
+      "training accuracy @ iter 1000 = 0.9131333333333334\n",
+      "Testing accuracy = 0.9141\n",
       "best model: 100 nodes \n",
-      "Testing accuracy = 0.9246\n",
+      "Testing accuracy = 0.9267\n",
       "Running model with 77 hidden layer nodes\n",
-      "training accuracy @ iter 1000 = 0.9188\n",
-      "Testing accuracy = 0.9206\n",
+      "training accuracy @ iter 1000 = 0.9190166666666667\n",
+      "Testing accuracy = 0.9171\n",
       "best model: 100 nodes \n",
-      "Testing accuracy = 0.9246\n",
+      "Testing accuracy = 0.9267\n",
       "Running model with 88 hidden layer nodes\n",
-      "training accuracy @ iter 1000 = 0.9217\n",
-      "Testing accuracy = 0.919\n",
+      "training accuracy @ iter 1000 = 0.9188333333333333\n",
+      "Testing accuracy = 0.92\n",
       "best model: 100 nodes \n",
-      "Testing accuracy = 0.9246\n",
-      "Running model with 88 hidden layer nodes\n",
-      "training accuracy @ iter 1000 = 0.9206833333333333\n",
-      "Testing accuracy = 0.919\n",
+      "Testing accuracy = 0.9267\n",
+      "Running model with 94 hidden layer nodes\n",
+      "training accuracy @ iter 1000 = 0.9245333333333333\n",
+      "Testing accuracy = 0.92\n",
       "best model: 100 nodes \n",
-      "Testing accuracy = 0.9246\n",
-      "Running model with 88 hidden layer nodes\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[37], line 27\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m dif \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m5\u001b[39m:\n\u001b[1;32m     26\u001b[0m     nodes \u001b[38;5;241m=\u001b[39m split(min_nodes, max_nodes)\n\u001b[0;32m---> 27\u001b[0m     acc, mod \u001b[38;5;241m=\u001b[39m run_model(nodes)\n\u001b[1;32m     29\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m min_acc \u001b[38;5;241m>\u001b[39m acc \u001b[38;5;129;01mand\u001b[39;00m acc \u001b[38;5;241m>\u001b[39m max_acc:\n\u001b[1;32m     30\u001b[0m         max_nodes \u001b[38;5;241m=\u001b[39m nodes\n",
-      "Cell \u001b[0;32mIn[37], line 14\u001b[0m, in \u001b[0;36mrun_model\u001b[0;34m(node_count)\u001b[0m\n\u001b[1;32m     12\u001b[0m nodes \u001b[38;5;241m=\u001b[39m split(min_nodes, max_nodes)\n\u001b[1;32m     13\u001b[0m nn \u001b[38;5;241m=\u001b[39m TwoLayerNN(train_dat\u001b[38;5;241m.\u001b[39mT, train_labels, test_dat\u001b[38;5;241m.\u001b[39mT, test_labels, hidden_nodes \u001b[38;5;241m=\u001b[39m node_count, output_nodes \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m, learning_rate \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.10\u001b[39m)\n\u001b[0;32m---> 14\u001b[0m nn\u001b[38;5;241m.\u001b[39mgradient_descent(iterations \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1000\u001b[39m)\n\u001b[1;32m     15\u001b[0m acc \u001b[38;5;241m=\u001b[39m nn\u001b[38;5;241m.\u001b[39mtest_accuracy()\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m acc, nn\n",
-      "Cell \u001b[0;32mIn[35], line 127\u001b[0m, in \u001b[0;36mTwoLayerNN.gradient_descent\u001b[0;34m(self, iterations)\u001b[0m\n\u001b[1;32m    124\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRunning model with \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhidden_layer\u001b[38;5;241m.\u001b[39mnode_count\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m hidden layer nodes\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    126\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(iterations):\n\u001b[0;32m--> 127\u001b[0m     pred \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mforward_prop(dataset \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtrain\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    128\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbackward_prop(pred)\n\u001b[1;32m    129\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m (i \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m) \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m1000\u001b[39m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
-      "Cell \u001b[0;32mIn[35], line 102\u001b[0m, in \u001b[0;36mTwoLayerNN.forward_prop\u001b[0;34m(self, dataset)\u001b[0m\n\u001b[1;32m     99\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m dataset \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtest\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m    100\u001b[0m     data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtest_dat\n\u001b[0;32m--> 102\u001b[0m hidden_transformed \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mhidden_layer\u001b[38;5;241m.\u001b[39mtransform(data)\n\u001b[1;32m    103\u001b[0m out \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39moutput_layer\u001b[38;5;241m.\u001b[39mtransform(hidden_transformed)\n\u001b[1;32m    105\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m out\n",
-      "Cell \u001b[0;32mIn[35], line 58\u001b[0m, in \u001b[0;36mLayer.transform\u001b[0;34m(self, input_dat)\u001b[0m\n\u001b[1;32m     56\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mtransform\u001b[39m(\u001b[38;5;28mself\u001b[39m, input_dat: np\u001b[38;5;241m.\u001b[39marray):\n\u001b[0;32m---> 58\u001b[0m     lin_transform \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mweights\u001b[38;5;241m.\u001b[39mdot(input_dat) \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbiases\n\u001b[1;32m     59\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39munactivated_node_values \u001b[38;5;241m=\u001b[39m lin_transform\n\u001b[1;32m     60\u001b[0m     node_values \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mactivation_func(lin_transform) \n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Testing accuracy = 0.9267\n",
+      "Running model with 94 hidden layer nodes\n",
+      "training accuracy @ iter 1000 = 0.92155\n",
+      "Testing accuracy = 0.9154\n",
+      "best model: 100 nodes \n",
+      "Testing accuracy = 0.9267\n",
+      "Running model with 94 hidden layer nodes\n",
+      "training accuracy @ iter 1000 = 0.9238166666666666\n",
+      "Testing accuracy = 0.9207\n",
+      "best model: 100 nodes \n",
+      "Testing accuracy = 0.9267\n",
+      "Running model with 97 hidden layer nodes\n",
+      "training accuracy @ iter 1000 = 0.9255666666666666\n",
+      "Testing accuracy = 0.9256\n",
+      "best model: 100 nodes \n",
+      "Testing accuracy = 0.9267\n",
+      "Running model with 98 hidden layer nodes\n",
+      "training accuracy @ iter 1000 = 0.9239833333333334\n",
+      "Testing accuracy = 0.9203\n",
+      "best model: 100 nodes \n",
+      "Testing accuracy = 0.9267\n"
      ]
     }
    ],
